clusters/building-blocks/other/apps/donetick/app/donetick-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: donetick
  namespace: default
  labels:
    app.kubernetes.io/name: donetick
spec:
  type: ClusterIP
  ports:
    - port: 2021
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: donetick
